force-app/main/default/objects/QuoteWarningCondition__c/QuoteWarningCondition__c.object-meta.xml
<CustomObject>
    <label>Quote Warning Condition</label>
    <nameField>
        <displayFormat>QWC-{0000}</displayFormat>
        <label>Quote Warning Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Warning Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>