force-app/main/default/objects/QuoteWarningCondition__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Warning Conditions</relationshipLabel>
    <relationshipName>Quote_Warning_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>