force-app/main/default/objects/QuoteWarningCondition__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>At least one</fullName>
            </value>
            <value>
                <fullName>Exactly one</fullName>
            </value>
            <value>
                <fullName>More than one</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>