force-app/main/default/objects/QuoteWarningCondition__c/fields/QuoteWarning__c.field-meta.xml
<CustomField>
    <fullName>QuoteWarning__c</fullName>
    <label>Quote Warning</label>
    <referenceTo>QuoteWarning__c</referenceTo>
    <relationshipLabel>Quote Warning Conditions</relationshipLabel>
    <relationshipName>QWCs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>